@@ -25,6 +25,9 @@ Version 1.3.15+svn:
    * Fixed reference to invalid pointer in attack::attack
    * pressing shift affects acceleration immediately
    * More gcc 4.3 fixed
+   * Remember cleared hotkey
+   * Added some toys&whisles to unit tests
+   * Added networking unit tests
    * Hide race sections having only units with "hide_help=true"
    * Optimize roads placing of random map
    * when a unit miss an animation, the engine will base the replacement on
